# twitch-chatbot

./: .gitignore  LICENSE.md  lint.sh  pyproject.toml  readme  readme.md  requirements.build.txt  requirements.dev.txt  requirements.txt  run.sh  run_mc_wordgame.sh  tasks.py  twitch_chatbot.py
chatbot/: __init__.py  core.py  main.py  version.py  wordgame.py
src/chatbot/: __init__.py  core.py  main.py  minecraft_1.20_item_list.yml  pokemon.py  token.py  version.py  wordgame.py  wordgame_wordlist.yml
src/tests/: test_wordgame.py
