[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = "twitch-chatbot"
description = 'A custom chatbot for twitch.'
readme = 'readme.md'
dynamic = ['version']
authors = [{name = "Curtis Sand"}]
requires-python = ">=3.9"
license = {file = 'LICENSE.md'}
dependencies = [
    'twitchio',
    'pyyaml'
]

[project.optional-dependencies]
dev = [
    'ipython',
    'pycodestyle',
    'pylint',
    'pytest'
]
build = [
    'build',
    'pip-tools'
]

[project.scripts]
twitch_chatbot = 'chatbot.main:main'

[tool.setuptools.packages.find]
where = ['src']
include = ["chatbot*"]
# exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
chatbot = ['minecraft_1.20_item_list.yml']

[tool.setuptools.dynamic]
version = {attr = "chatbot.__version__"}
